Updated exp and education sections

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
       <div class="main-content">
         <section class="home section" id="home">
           <!-- ======== Home Section Start ========-->
-          <div class="container">           
-
+          <div class="container">
             <div class="row">
               <div class="home-info">
                 <h3 class="hello">
@@ -205,34 +204,23 @@
                         <div class="timeline shadow-dark">
                           <!-- ====== timeline item ======== -->
                           <div class="timeline-item">
-                            <div class="circle-dot"></div
-                            ></a>
-                            <h4 class="timeline-title">STEVE-SEFTEL.CA</h4>
-                            <p class="timeline-text">
-                              Steve ascended the professional hockey ladder very
-                              quickly. At 16 he was playing midget in Kitchener.
-                              Two years later he was at the Washington Capitals
-                              training camp. For a time, it was a dream come
-                              true. He was a professional hockey player in the
-                              NHL.
-                            </p>
-                          </div>
-
-                          <!-- ====== timeline item ======== -->
-                          <div class="timeline-item">
                             <a href="https://www.halsawellnessnl.ca/"
                               ><div class="circle-dot"></div
                             ></a>
-                            <h4 class="timeline-title">HALSA WELLNESS</h4>
+                            <h4 class="timeline-title">Halsa Wellness</h4>
                             <p class="timeline-text">
-                              Established in 2023 by co-founders Matthew Caravan
-                              and Terri-Lynn Penney, Hälsa Wellness embodies a
-                              progressive approach to healthcare in Corner Brook
-                              and surrounding areas. Hälsa Wellness, we are
-                              deeply committed to enhancing overall health and
-                              well-being through an array of therapeutic
-                              modalities, including registered massage therapy,
-                              lymphatic drainage therapy, and manual osteopathy.
+                              I designed and maintained a business website using
+                              WordPress, integrating an online booking system
+                              that significantly boosted client traffic and
+                              retention. By implementing effective SEO
+                              strategies, I increased the site's visibility and
+                              improved its local search ranking, which led to
+                              higher repeat bookings, stronger client retention,
+                              and greater public awareness.
+                            </p>
+                            <p class="fa fa-light fa-code">
+                              HTML | CSS | JavaScript | WordPress | SEO |
+                              Optimization
                             </p>
                           </div>
 
@@ -242,13 +230,99 @@
                               ><div class="circle-dot"></div
                             ></a>
                             <h4 class="timeline-title">
-                              WILD SIDE ADVENTURE TOURS
+                              Wild Side Adventure Tours
                             </h4>
                             <p class="timeline-text">
-                              The website is intended for an Outdoor Tours
-                              company to advertise and sell adventure packages.
-                              I comleted this project as a part of an online CSS
-                              course.
+                              As a showcase of the power of HTML and CSS, I
+                              created Adventure Tours, a responsive, multi-page
+                              website designed to showcase tour packages and
+                              encourage user engagement. Built with HTML, CSS,
+                              the site features an intuitive layout, visually
+                              appealing design, and clear calls-to-action to
+                              simulate a real-world tour company experience. I
+                              focused on clean code structure, user-friendly
+                              navigation, and visual consistency across pages.
+                              The project demonstrates my ability to build
+                              engaging front-end websites from scratch, with
+                              attention to both design and functionality.
+                            </p>
+                            <p class="fa fa-light fa-code">
+                              HTML | CSS | SASS |
+                            </p>
+                          </div>
+
+                          <!-- ====== timeline item ======== -->
+                          <div class="timeline-item">
+                            <a href="#contact"
+                              ><div class="circle-dot"></div
+                            ></a>
+                            <h4 class="timeline-title">eSolutions Group</h4>
+                            <p class="timeline-text">
+                              I developed custom safety training software to
+                              streamline employee onboarding and ensure
+                              compliance. By automating tracking and reminders,
+                              I improved training participation, which led to
+                              increased compliance rates. Additionally, the
+                              enhanced access to training and robust reporting
+                              tools contributed to a reduction in workplace
+                              safety infractions.
+                            </p>
+                            <p class="fa fa-light fa-code">
+                              HTML | CCS | ActionScript | C# | SQL
+                            </p>
+                          </div>
+
+                          <!-- ====== timeline item ======== -->
+                          <div class="timeline-item">
+                            <a href="#contact"
+                              ><div class="circle-dot"></div
+                            ></a>
+                            <h4 class="timeline-title">
+                              Milestone Media Company
+                            </h4>
+                            <p class="timeline-text">
+                              I led the programming of a video game, working
+                              closely with graphic designers to implement a
+                              cohesive and user-friendly interface. In addition
+                              to the game itself, I collaborated on the
+                              integration and coding of promotional websites
+                              designed to support its launch. These efforts
+                              boosted client satisfaction and user engagement,
+                              resulting in increased web traffic and higher
+                              visitor retention rates.
+                            </p>
+                            <p class="fa fa-light fa-code">
+                              HTML | CCS | ActionScript | Adobe Photoshop |
+                              Adobe Illustrator
+                            </p>
+                          </div>
+
+                          <!-- ====== timeline item ======== -->
+                          <div class="timeline-item">
+                            <a href="#contact"
+                              ><div class="circle-dot"></div
+                            ></a>
+                            <h4 class="timeline-title">
+                              Brad Seftel Yoga System
+                            </h4>
+                            <p class="timeline-text">
+                              I designed and launched a business website focused
+                              on delivering online video-based yoga instruction,
+                              creating a platform that made high-quality
+                              wellness content accessible to a wider audience.
+                              To support sustainable growth, I integrated a
+                              Patreon paywall that offered premium content
+                              through a subscription model, increasing revenue
+                              and user investment. I also developed a structured
+                              online curriculum for training and certifying yoga
+                              teachers, which not only supported professional
+                              development but also helped grow the local
+                              wellness community and promote a healthy
+                              lifestyle.
+                            </p>
+                            <p class="fa fa-light fa-code">
+                              HTML | CCS | JavaScript | Squarespace | Patreon |
+                              YouTube
                             </p>
                           </div>
                         </div>
@@ -264,14 +338,33 @@
                           <!-- ====== timeline item ======== -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h4 class="timeline-title">C++ - Correspondance</h4>
+                            <h4 class="timeline-title">
+                              Keyin College, St Johns, NFLD
+                            </h4>
                             <p class="timeline-text">
-                              I have benefited in many very important ways from
-                              this book Written by Bjarne Stroustrup, the
-                              creator of C++ . It has proved to be an
-                              exceptional foundation for programming in general.
-                              A steep learning curve but well worth the
-                              struggle.
+                              Currently studying at Keyin College, focusing on
+                              the Digital Health Administration program. This
+                              program provides me with a comprehensive
+                              understanding of electronic health records,
+                              healthcare technology, data management, and
+                              administrative processes within the healthcare
+                              sector. I am learning practical skills relevant to
+                              managing and utilizing digital tools to enhance
+                              healthcare efficiency and patient care.
+                            </p>
+                          </div>
+
+                          <!-- ====== timeline item ======== -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h4 class="timeline-title">CCMH, Cambridge, ON</h4>
+                            <p class="timeline-text">
+                              Completed in-depth coursework in anatomy,
+                              physiology, and therapeutic techniques while
+                              developing a strong foundation in client care and
+                              wellness. Gained hands-on experience through
+                              clinical practice, emphasizing holistic health and
+                              evidence-based treatment approaches.
                             </p>
                           </div>
 
@@ -279,51 +372,26 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                             <h4 class="timeline-title">
-                              Flash and Action-Script Bootcamp
+                              Conestoga College | FreecodeCamp | Front End
+                              Masters | Udemy | Zero to Mastery
                             </h4>
                             <p class="timeline-text">
-                              Course syllabus covered OOP basics, including:
-                              Classes, objects, and packages, Methods and
-                              variables, Inheritance, Encapsulation, Datatypes
-                              and error, handling, Garbage collection and memory
-                              management, Application structure, design
-                              principles, graphics loading and display,
-                              Interactivity, Model/View/Controller architecture,
-                              state management, event dispatch, event handling
-                              and text output
+                              I have completed a variety of continuing education
+                              courses to stay current and expand my skills in
+                              software and web development. These courses
+                              include subjects such as React, Express.JS,
+                              MongoDB and more.This demonstrates my commitment
+                              to lifelong learning and adapting to evolving
+                              technologies.
                             </p>
                           </div>
-
                           <!-- ====== timeline item ======== -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                             <h4 class="timeline-title">
-                              C# - Conestoga College
+                              St Jeromes High School
                             </h4>
-                            <p class="timeline-text">
-                              Programming fundamentals: input/output operations,
-                              decision making, and looping. Hands-on experience
-                              with sequential data files and how to build a
-                              professional-looking and intuitive Graphical User
-                              Interface.
-                            </p>
-                          </div>
-
-                          <!-- ====== timeline item ======== -->
-                          <div class="timeline-item">
-                            <div class="circle-dot"></div>
-                            <h4 class="timeline-title">
-                              Continuing Education Via Freecode Camp, CS50, The
-                              Odin Prj, Udemy and more.
-                            </h4>
-                            <p class="timeline-text">
-                              Having been in the industry over the last 15 years
-                              I have seen massive changes and a maturing of the
-                              core group of technologies. Namely, HTML, CSS and
-                              Javascript. In recent years I have chosen self
-                              directed learning to understand new and ever
-                              changing technologies that interest me the most.
-                            </p>
+                            <p class="timeline-text">High School Diploma</p>
                           </div>
                         </div>
                       </div>
@@ -371,7 +439,7 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-envelope"></i></div>
                 <h4>Email</h4>
-                <p>webdev@brad-seftel.com</p>
+                <p>websolutions@brad-seftel.com</p>
               </div>
 
               <div class="contact-sub-title padd-15">
